Version 0.0.21
Fixed a bug where the task start date attribute was not always correct for MPP8 files.

Version 0.0.20
Fixed a bug where alternative decimal delimiters and thousands separators were not being handled correctly when reading and writing MPX files.
Fixed a bug causing a null pointer exception when writing an MSPDI file.
Fixed a bug in MSPDI files where default values were being written incorrectly for some task attributes.
Fixed a bug with MSPDI file date handling in non GMT time zones.
Fixed a bug in processing calendar data where data block is not a multiple of 12 bytes
Fixed a bug processing tables where column data is null
Added support for task calendars.
Fixed checkstyle code warnings.
Fixed Eclipse code warnings.
Updated to include version 2.5 of the POI library.

Version 0.0.19
Fixed a bug reading table data from certain MPP8 files
Updated MSPDI support to use latest version of JAXB (from JWSDP-1.3)
Reimplemented base and resource calendars as a single MPXCalendar class
Updated support for base calendars and resource calendars for all file formats
Improved MPXException to print details of any nested exception when a stack trace is printed.
Removed unnecessary use of ByteArray.java
Added support for the following task fields: 
	ActualOvertimeCost, ActualOvertimeWork, FixedCostAccrual, Hyperlink, HyperlinkAddress,
	HyperlinkSubAddress, LevelAssignments, LevelingCanSplit, LevelingDelay,
	PreleveledStart, PreleveledFinish, RemainingOvertimeCost, RemainingOvertimeWork

Version 0.0.18
Fixed a bug with writing MS Project compatible MSPDI XML files in non-GMT timezones.
Fixed a bug with writing MSPDI XML files in non-GMT timezones.
Fixed a bug causing an exception when zero length calendar names were present
Fixed a bug causing MPP8 flags to be read incorrectly. Note that flag 20 is still not read correctly.
Fixed a bug with the "Microsoft Project Compatible Output" flag for MSPDI files.
Fixed a bug reading task text 10.